# puzzletools

./: .travis.yml  Cargo.toml  README.md  deny.toml
data/: elements.tsv  genetic_code.tsv  morse.tsv
examples/: mh00_round3.rs  mh02_green.rs  mh02_magenta.rs  mh02_orange.rs  mh02_purple.rs  mh02_red.rs  mh05_blue.rs  mh05_green.rs  mh05_purple_star.rs  mh06_boston.rs  mh06_boston_ante.rs  mh06_cambridge_ante.rs  mh06_paris.rs  mh09_castor_pollux.rs  mh09_pluto.rs  mh09_the_atm.rs  mh09_virtual_sectors.rs  mh10_1926.rs  mh10_1952.rs  mh11_small.rs  mh13_following_the_news.rs  mh15_dolphins.rs  mh17_crafty_backsolve.rs  mh19_ar_bl.rs  mh19_va_pr.rs  mh20_carousel.rs  mh20_harvard.rs  mh20_trainer.rs  mh21_enter.rs  mh22_how_to_find.rs  readme1.rs  readme2.rs
src/: code.rs  data.rs  io.rs  iter.rs  letter.rs  lib.rs  search.rs  word.rs  wordlist.rs
