[package]
name = "puzzletools"
version = "0.1.0"
authors = ["Daniel R Gulotta <dgulotta@alum.mit.edu>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
csv = "^1.0"
dotenv = "^0.15"
fnv = "^1.0"
lazy_static = "^1.0"
regex = "^1.0"
serde = "^1.0"
serde_derive = "^1.0"
thiserror = "^1.0"
